2008-04-04  Johannes Schmid  <johanens.schmid@openismus.com>

	* glom/glom_developer.glade:
	Added dialog_flowtable
	
	* glom/mode_data/flowtablewithfields.cc (Glom.FlowTableWithFields,
	  (add_layout_group_at_position), (on_menu_properties_activate),
	  (on_button_press_event):
	* glom/mode_data/flowtablewithfields.h
	Added popup-menu for flowtables
	
	* glom/utility_widgets/buttonglom.cc (on_button_press_event):
	* glom/utility_widgets/labelglom.cc (on_button_press_event):
	Fixed a crasher when not in developer mode

	* glom/utility_widgets/Makefile.am:
	* glom/utility_widgets/dialog_flowtable.cc (Glom,
	  (set_flowtable), (get_title), (get_columns_count):
	* glom/utility_widgets/dialog_flowtable.h 
	Added configuration dialog for FlowTables
	
	* glom/utility_widgets/layoutwidgetutils.h (LayoutWidgetUtils):
	Do not derive from sigc::trackable as it's not necessary.

2008-04-04  Murray Cumming  <murrayc@murrayc.com>

	* glom/utility_widgets/db_adddel/db_adddel.cc: Fix the previous commit: 
	treeviewcolumn_on_cell_data(): Do set the pixbuf property to NULL when 
	it is empty, or images apear repeated on rows.

2008-04-04  Murray Cumming  <murrayc@murrayc.com>

	* glom/utility_widgets/db_adddel/db_adddel.cc:
	treeviewcolumn_on_cell_data(): Do not try to dereference a null pixbuf 
	refptr. This fixes a crash when adding an image field to the list view 
	if one of the records has no data in that field.
	Bug #526114 (Jani Monoses).

2008-04-04  Murray Cumming  <murrayc@murrayc.com>

	* glom/mode_data/box_data_list.cc
	* glom/mode_data/box_data_list.h
	on_dialog_layout_hide(): Override this so we can set a bool and 
	check for this bool in create_layout_add_group(), to reset the column 
	widths after the layout dialog has been closed. Otherwise the new 
	columns are off the right-hand side of the scroll area, making users 
	think that nothing has happened unless they look at the scroll bar.
	This is not ideal, but drag-and-drop will make this easier anyway.